<resources>
    <string name="app_name">ScoutLog</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="always">Always</string>
    <string name="places">Places</string>
    <string name="browse_by_tags">Browse by Tags</string>
    <string name="search">Search</string>
    <string name="display_mode">Display mode:</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="places_title">Places</string>
    <string name="menu_delete_places">Delete</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_edit_tags">Edit tags</string>
    <string name="menu_export">Export</string>
    <string name="menu_export_gpx">Export as GPX</string>
    <string name="menu_export_kml">Export as KML</string>
    <string name="menu_export_csv">Export as CSV</string>
    <string name="export_notification_title">Exporting places</string>
    <string name="export_failed_title">Export error</string>
    <string name="export_failed_message">There was an error while trying to export.</string>
    <string name="export_share_intent_title">Share file</string>
    <string name="include_csv_header">Include CSV header</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_alpha">A - Z</string>
    <string name="menu_sort_reverse_alpha">Z - A</string>
    <string name="menu_sort_newest">Newest</string>
    <string name="menu_sort_oldest">Oldest</string>
    <string name="menu_sort_closest">Closest</string>
    <string name="menu_sort_most_places">Most places tagged</string>
    <string name="menu_sort_fewest_places">Fewest places tagged</string>
    <string name="untitled">(Untitled)</string>
    <string name="empty_places_text">You don\'t have any saved places.</string>
    <string name="empty_places_search_text">No places were found matching that search term.</string>
    <string name="add_place">Add a new place</string>
    <string name="add_place_widget">Add a place</string>
    <string name="add_place_widget_picker_title">Quick-add place</string>
    <string name="no_google_play_services_title">Google Play Services not found</string>
    <string name="no_google_play_services_message">Cannot find the Google Play services app.</string>
    <string name="account_not_found_title">Google Account not found</string>
    <string name="account_not_found_message">Your Google Drive account could not be found, so syncing will be disabled.</string>
    <string name="sync_warning_dialog_title">Set up syncing</string>
    <string name="sync_warning_dialog_message">You\'ve added more than 15 places to ScoutLog!\n\nIt\'s recommended that you set up syncing to ensure your data is protected in the cloud.</string>
    <string name="dismiss">Dismiss</string>
    <string name="open_sync_settings">Open sync settings</string>
    <string name="open_settings">Open settings</string>
    <string name="undo">Undo</string>
    <plurals name="places_deleted_snackbar">
        <item quantity="one">%1$d place deleted</item>
        <item quantity="other">%1$d places deleted</item>
    </plurals>
    <string name="nav_action_failed">Navigation action failed</string>
    <string name="new_place_desc">%1$s\n\nTap to create a new place here.</string>
    <string name="waiting_for_location">Waiting for location…</string>
    <string name="location_request_failed">Failed to get location</string>
    <string name="address_unavailable">(Address unavailable right now)</string>
    <string name="no_location_set">(No location set)</string>
    <string name="no_location_set_toast">No location set</string>
    <string name="copy_coordinates">Copy coordinates</string>
    <string name="copy_address">Copy address</string>
    <string name="copied_coordinates">Copied coordinates</string>
    <string name="copied_address">Copied address</string>
    <string name="map_toggle_terrain_desc">Toggle the satellite hybrid map</string>
    <string name="location_services_disabled_title">Location services disabled</string>
    <string name="location_services_disabled_message">Location services need to be enabled to get your location.</string>
    <string name="ignore">Ignore</string>
    <string name="settings">Settings</string>
    <string name="improve_location_accuracy_title">Improve location accuracy</string>
    <string name="improve_location_accuracy_gps_message">You can improve the accuracy of your device\'s location by enabling GPS.</string>
    <string name="improve_location_accuracy_wifi_message">You can improve the accuracy of your device\'s location by enabling WiFi.</string>
    <string name="location_request_for_places_failed_title">Location update error</string>
    <string name="location_request_for_places_failed_message">Failed to get an up-to-date location, so places could not be sorted by closest to you.</string>
    <string name="try_again">Try again</string>
    <string name="close">Close</string>
    <string name="sticky_current_location_help_screen_1">You have enabled the "Track your location" mode!\n\nIn this mode, when you tap the current location button, the map will stay centered on your location.</string>
    <string name="sticky_current_location_help_screen_2">You can turn it off by tapping the current location button again, or by swiping around in the map.</string>
    <string name="sticky_current_location_help_screen_3">Note that this feature will drain your battery if left on for long periods of time.</string>
    <string name="switch_display_mode_suggestion_title">Switch the display mode</string>
    <string name="switch_display_mode_suggestion_message">You aren\'t adding photos for most of your places. You might want to switch to another display mode.</string>
    <string name="browse_by_tags_title">Browse by Tags</string>
    <plurals name="num_places_tagged_text">
        <item quantity="one">%1$d place</item>
        <item quantity="other">%1$d places</item>
    </plurals>
    <string name="untagged_places">(Untagged)</string>
    <string name="untagged_places_title">Untagged Places</string>
    <string name="new_place">New Place</string>
    <string name="title">Title</string>
    <string name="set_title">Set Title</string>
    <string name="edit_title">Edit Title</string>
    <string name="tags">Add tags</string>
    <string name="notes">Add a note</string>
    <string name="linked_place">Link to another place</string>
    <string name="pick_date">Choose a date for this place</string>
    <string name="date_title">Date</string>
    <string name="notes_title">Notes</string>
    <string name="share_place">Share</string>
    <string name="share_text">Shared with the ScoutLog app</string>
    <string name="empty_photos_text">You don\'t have any photos saved for this place.</string>
    <string name="add_photo_camera">Take photo with camera</string>
    <string name="add_photo_gallery">Add photo from gallery</string>
    <string name="save">Save</string>
    <string name="copy_current_datetime">Copy current date</string>
    <string name="copy_date">Copy date</string>
    <string name="copy_time">Copy time</string>
    <string name="copy_datetime">Copy date and time</string>
    <string name="add_tag">Add Tag</string>
    <string name="settings_advanced_category">Advanced</string>
    <string name="sync_help_header_1">How it works</string>
    <string name="sync_help_text_1">Select a Google account, and ScoutLog will create a folder in Drive to store your places, tags and photos. Check the "Sync automatically" option to have ScoutLog periodically sync with Drive.</string>
    <string name="sync_help_header_2">Troubleshooting</string>
    <string name="sync_help_text_2a">If some of your data doesn\'t seem to be syncing between ScoutLog and Google Drive, there could be a problem with the metadata. To maximize efficiency, ScoutLog stores metadata to keep track of what data has changed since the last sync. Use the button below to clear the metadata and perform a full sync.</string>
    <string name="full_sync_button">Perform full sync</string>
    <string name="sync_help_text_2b">If syncing seems to be failing often, you can email me (the developer). The email will contain anonymous information about any recent sync failures which will help me debug and fix any issues.</string>
    <string name="sync_email_button">Email me to debug the issue</string>
    <string name="integ_help_header_1">How it works</string>
    <string name="integ_help_text_1">Share a file to ScoutLog to import its data. GPX, Google Bookmarks, and photo files are supported. If you have trouble with an import or want to request support for a file format, please email me.</string>
    <string name="integ_email_button">Email me</string>
    <string name="integ_help_header_2">Importing Google Maps stars</string>
    <string name="integ_help_header_3">Ignored import data</string>
    <string name="integ_help_text_3">Some data may be ignored during import. There are several reasons this can happen:\n\n1. There are duplicate entries and the \"Ignore duplicates\" setting is enabled.\n\n2. You have exceeded the limit of places you can import and you haven\'t purchased the unlock version yet.\n\n3. Some data has to be downloaded before importing and there was an error downloading the file.</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_behavior">Behavior</string>
    <string name="pref_category_sync">Sync to Google Drive</string>
    <string name="pref_category_integ">Import</string>
    <string name="pref_category_advanced">Advanced features</string>
    <string name="pref_help_translate_title">Help translate</string>
    <string name="pref_help_translate_summary">Email me to help translate ScoutLog into other languages!</string>
    <string name="pref_measurement">Distance units</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_map_marker_color">Default map pin color</string>
    <string name="pref_sticky_current_location_title">Track your location</string>
    <string name="pref_sticky_current_location_summary">If enabled, the map will stay centered on your device\'s location, even when you move</string>
    <string name="pref_photos_location_title">Photo storage folder</string>
    <string name="pref_notify_unsaved_changes_title">Unsaved changes warning</string>
    <string name="pref_notify_unsaved_changes_summary">Show a warning message before discarding unsaved changes</string>
    <string name="pref_show_closest_address_title">Show closest address</string>
    <string name="pref_show_closest_address_summary">When a place only has latitude/longitude coordinates, show the closest address instead</string>
    <string name="pref_list_view_photos">Show photos in list view</string>
    <string name="pref_show_map_markers_title">Show map markers in places list</string>
    <string name="pref_show_map_markers_summary">If a place\'s first tag has a map marker, show it in the list and grid</string>
    <string name="pref_cluster_threshold_title">Pin grouping threshold</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_auto_sync_title">Sync automatically</string>
    <string name="pref_auto_sync_summary">Sync periodically with Google Drive to keep your device up-to-date</string>
    <string name="pref_sync_now_title">Sync now</string>
    <string name="pref_photo_storage_title">Photo storage</string>
    <string name="pref_reporting_title">Improve ScoutLog</string>
    <string name="pref_reporting_summary">Help improve ScoutLog by sending anonymous usage data</string>
    <string name="pref_unlock_title">Unlock ScoutLog</string>
    <string name="pref_unlock_summary">Purchase the unlock version for full access to ScoutLog</string>
    <string name="pref_about_title">About</string>
</resources>