<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="?attr/iconSearch"
        android:visible="false"
        app:showAsAction="collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/menu_add_location"
        android:title="@string/add_place"
        android:icon="?attr/iconAddLocation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/action_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_alpha"
                    android:title="@string/menu_sort_alpha" />
                <item
                    android:id="@+id/menu_sort_reverse_alpha"
                    android:title="@string/menu_sort_reverse_alpha" />
                <item
                    android:id="@+id/menu_sort_newest"
                    android:title="@string/menu_sort_newest" />
                <item
                    android:id="@+id/menu_sort_oldest"
                    android:title="@string/menu_sort_oldest" />
            </group>
        </menu>

    </item>

</menu>
