<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_tag"
        android:title="@string/add_tag"
        android:icon="@drawable/add_tag_ab_dark"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort"
        android:icon="@drawable/action_sort"
        app:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_alpha"
                    android:title="@string/menu_sort_alpha" />
                <item
                    android:id="@+id/menu_sort_reverse_alpha"
                    android:title="@string/menu_sort_reverse_alpha" />
                <item
                    android:id="@+id/menu_sort_most_locations"
                    android:title="@string/menu_sort_most_places" />
                <item
                    android:id="@+id/menu_sort_fewest_locations"
                    android:title="@string/menu_sort_fewest_places" />
            </group>
        </menu>

    </item>

</menu>
