<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <button
        android:id="@+id/menu_finish_selection"
        android:icon="@drawable/action_finish_selection" />

    <item
        android:id="@+id/menu_select_all"
        app:showAsAction="always|withText"
        android:title="@string/menu_select_all" />

    <item
        android:id="@+id/menu_delete_selected"
        android:icon="@drawable/delete_dark"
        app:showAsAction="ifRoom"
        android:title="@string/menu_delete_places" />

    <item
        android:id="@+id/menu_edit_tags"
        app:showAsAction="never"
        android:title="@string/menu_edit_tags" />

    <item
        android:id="@+id/menu_export"
        app:showAsAction="never"
        android:title="@string/menu_export">

        <menu>
            <group>

                <item
                    android:id="@+id/menu_export_gpx"
                    app:showAsAction="never"
                    android:title="@string/menu_export_gpx" />

                <item
                    android:id="@+id/menu_export_csv"
                    app:showAsAction="never"
                    android:title="@string/menu_export_csv" />

            </group>
        </menu>

    </item>

</menu>