<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_photos_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/empty_photos_text"
        style="?attr/emptyListText" />

    <Button
        android:id="@+id/detail_photo_add_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:text="@string/add_photo_camera"
        android:textStyle="italic"
        style="?attr/emptyPhotosAddFromCameraButton" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        style="?attr/emptyPhotosButtonSeparator" />

    <Button
        android:id="@+id/detail_photo_add_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:drawablePadding="10dp"
        android:text="@string/add_photo_gallery"
        android:textStyle="italic"
        style="?attr/emptyPhotosAddFromGalleryButton" />

</LinearLayout>