<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/detail_title_ct"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:animateLayoutChanges="true"
              android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/detail_display_title_ct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/detail_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:hint="@string/untitled" />

        <Button
            android:id="@+id/detail_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@string/set_title"
            android:background="#09c"
            android:textSize="12sp"
            android:textColor="#eee"
            android:textAllCaps="true" />

    </LinearLayout>

    <EditText
        android:id="@+id/detail_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="textCapWords|textMultiLine"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/detail_title_save_ct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:visibility="gone">

        <Button
            android:id="@+id/detail_cancel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:minWidth="72dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@android:string/cancel"
            android:background="#09c"
            android:textSize="12sp"
            android:textColor="#eee"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/detail_save_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:minWidth="72dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@string/save"
            android:background="#09c"
            android:textSize="12sp"
            android:textColor="#eee"
            android:textAllCaps="true" />

    </LinearLayout>

</LinearLayout>